@@ -187,10 +187,6 @@ sub refresh {
 	return 1;
 }
 
-
-
-
-
 1;
 
 # Copyright 2008-2010 The Padre development team as listed in Padre.pm.
